--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "cra-template": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "stream-chat": "^6.4.0",
-    "stream-chat-react": "^8.1.0",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
